<resources>
    <string name="app_name">RemindMe</string>

    <string name="action_delete_reminder">Delete Reminder</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="action_settings">Settings</string>

    <string name="add_or_edit_reminder_toolbar_title">Add Reminder</string>
    <string name="no_reminder_text">Nothing here!</string>
    <string name="ok">OK</string>
    <string name="add_reminder_title_hint">Reminder Title</string>
    <string name="details_title">Details</string>
    <string name="date_title">Date</string>
    <string name="time_title">Time</string>
    <string name="repeat_title">Repeat</string>
    <string name="repeat_number_title">Repetition Interval</string>
    <string name="repeat_type_title">Type of Repetitions</string>
    <string name="discarded">Discarded</string>
    <string name="saved">Saved</string>
    <string name="blank_title_error">Reminder Title cannot be blank!</string>
    <string name="select_type">Select Type</string>
    <string name="enter_number">Enter Number</string>
    <string name="cancel">Cancel</string>

    <string-array name="repeat_type">
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
</resources>
