<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp">

                <EditText
                    android:id="@+id/et_reminder_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_reminder_title_hint"
                    android:textColorHint="@color/primary_text_disabled_material_dark"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:lines="4"
                    android:minLines="4"
                    android:gravity="top"
                    android:scrollHorizontally="false"
                    android:inputType="textCapWords|textMultiLine"
                    />

            </android.support.design.widget.TextInputLayout>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/details_title"
                    android:layout_marginLeft="72dp"
                    android:layout_marginStart="72dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/textColorSecondary"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="onClickSetDate">

                    <ImageView
                        android:id="@+id/iv_date_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_calendar_today_grey"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/iv_date_icon"
                        android:layout_toEndOf="@id/iv_date_icon"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/date_title"/>

                        <TextView
                            android:id="@+id/tv_reminder_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="onClickSetTime">

                    <ImageView
                        android:id="@+id/iv_time_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_clock_grey"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/iv_time_icon"
                        android:layout_toEndOf="@id/iv_time_icon"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/time_title"/>

                        <TextView
                            android:id="@+id/tv_reminder_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_repeat_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_sync_grey"/>

                    <Switch
                        android:id="@+id/switch_reminder_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/iv_repeat_icon"
                        android:layout_toEndOf="@id/iv_repeat_icon"
                        android:layout_toLeftOf="@id/switch_reminder_repeat"
                        android:layout_toStartOf="@id/switch_reminder_repeat"
                        android:layout_margin="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/repeat_title"/>

                        <TextView
                            android:id="@+id/tv_reminder_repeat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="onClickSetRepeatNumber">

                    <ImageView
                        android:id="@+id/iv_repeat_number_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_unfold_more_grey"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/iv_repeat_number_icon"
                        android:layout_toEndOf="@id/iv_repeat_number_icon"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/repeat_number_title"/>

                        <TextView
                            android:id="@+id/tv_reminder_repeat_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="onClickSetRepeatType">

                    <ImageView
                        android:id="@+id/iv_repeat_type_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_timetable_grey"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/iv_repeat_type_icon"
                        android:layout_toEndOf="@id/iv_repeat_type_icon"
                        android:layout_centerVertical="true"
                        android:layout_margin="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorPrimary"
                            android:text="@string/repeat_type_title"/>

                        <TextView
                            android:id="@+id/tv_reminder_repeat_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_reminder_silent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bell_ring_white"
        android:layout_margin="16dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|left|end"/>

</android.support.design.widget.CoordinatorLayout>
